#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(wireway, 0.0.1, [lijiyong0303@163.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([wireway.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CC_STDC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC


AC_CONFIG_FILES([Makefile])

AC_OUTPUT
